@@ -12,6 +12,7 @@ import seedu.address.commons.exceptions.IllegalValueException;
 import seedu.address.model.person.Address;
 import seedu.address.model.person.Email;
 import seedu.address.model.person.JobTitle;
+import seedu.address.model.person.Label;
 import seedu.address.model.person.Name;
 import seedu.address.model.person.Person;
 import seedu.address.model.person.Phone;
@@ -34,6 +35,7 @@ class JsonAdaptedPerson {
     private final String schedule;
     private String remark;
     private final List<JsonAdaptedTag> tags = new ArrayList<>();
+    private final String label;
 
     /**
      * Constructs a {@code JsonAdaptedPerson} with the given person details.
@@ -42,11 +44,13 @@ class JsonAdaptedPerson {
     public JsonAdaptedPerson(@JsonProperty("name") String name, @JsonProperty("phone") String phone,
             @JsonProperty("email") String email, @JsonProperty("address") String address,
             @JsonProperty("jobTitle") String jobTitle, @JsonProperty("schedule") String schedule,
-            @JsonProperty("remark") String remark, @JsonProperty("tags") List<JsonAdaptedTag> tags) {
+            @JsonProperty("label") String label, @JsonProperty("remark") String remark,
+            @JsonProperty("tags") List<JsonAdaptedTag> tags) {
         this.name = name;
         this.phone = phone;
         this.email = email;
         this.address = address;
+        this.label = label;
         this.schedule = schedule;
         this.jobTitle = jobTitle;
         this.remark = remark;
@@ -68,7 +72,8 @@ class JsonAdaptedPerson {
         remark = source.getRemark().value;
         tags.addAll(source.getTags().stream()
                 .map(JsonAdaptedTag::new)
-                .toList());
+                .collect(Collectors.toList()));
+        label = source.getLabel().value;
     }
 
     /**
@@ -114,6 +119,14 @@ class JsonAdaptedPerson {
         }
         final Address modelAddress = new Address(address);
 
+        if (label == null) {
+            throw new IllegalValueException(String.format(MISSING_FIELD_MESSAGE_FORMAT, Label.class.getSimpleName()));
+        }
+        if (!Label.isValidLabel(label)) {
+            throw new IllegalValueException(Label.MESSAGE_CONSTRAINTS);
+        }
+        Label modelLabel = new Label(label);
+
         if (jobTitle == null) {
             throw new IllegalValueException(String.format(MISSING_FIELD_MESSAGE_FORMAT,
                     JobTitle.class.getSimpleName()));
@@ -135,8 +148,9 @@ class JsonAdaptedPerson {
         final Remark modelRemark = new Remark(remark);
 
         final Set<Tag> modelTags = new HashSet<>(personTags);
+
         return new Person(modelName, modelPhone, modelEmail, modelAddress, modelJobTitle,
-                modelSchedule, modelRemark, modelTags);
+                modelSchedule, modelLabel, modelRemark, modelTags);
     }
 
 }
